<resources>
    <string name="app_name">Mangindo</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="release_date">Release date</string>
    <string name="manga_title">Manga title</string>
    <string name="close_search">Close Search</string>
    <string name="filter_title_mangindo">Open Mangindo</string>

    <string name="chapter_">Chapter %s</string>
    <string name="page_">Page %d</string>

    <string name="_chapter">%s Chapter</string>

    <string formatted="true" name="manga_page_index">Page %1$d/%2$d</string>

    <string name="dlg_ask_next_chapter">Do you want to read next chapter?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="author">Author</string>
    <string name="status">Status</string>
    <string name="genre">Genre</string>
    <string name="summary">Summary</string>
</resources>
