<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort_by_white"
        android:orderInCategory="1"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_release"
                    android:title="@string/release_date"
                    android:checked="true"/>
                <item
                    android:id="@+id/action_sort_by_title"
                    android:title="@string/manga_title" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="2"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

</menu>