<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.MangaInfoActivity">

    <include layout="@layout/toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageMangaCover"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimaryOverlay_50"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/textTitleAuthor"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:text="@string/author"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/textAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textTitleAuthor"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    tools:text="Mizaki Kanoto"/>

                <TextView
                    android:id="@+id/textTitleStatus"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textAuthor"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:text="@string/status"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textTitleStatus"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    tools:text="On Going"/>

                <TextView
                    android:id="@+id/textTitleGenre"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textStatus"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:text="@string/genre"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/textGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textTitleGenre"
                    android:layout_toEndOf="@id/imageMangaCover"
                    android:layout_toRightOf="@id/imageMangaCover"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    tools:text="Shounen, Action, Adventure, Drama, Fantasy, Horror, Comedy"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/listDividerLight"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/listDividerLight"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/textTitleSummary"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/textSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/textTitleSummary"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    tools:text="@string/lorem_ipsum"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/listDividerLight"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
